--- a/src/less/index/side.less
+++ b/src/less/index/side.less
@@ -36,6 +36,7 @@
       button{
         display: block;
         flex: 1;
+        outline:none;
         background: #00a2ed;
         border:none;
         font-size: 0.42rem;
