--- a/src/css/index/side.css
+++ b/src/css/index/side.css
@@ -39,6 +39,7 @@
 .side header .bottom button {
   display: block;
   flex: 1;
+  outline: none;
   background: #00a2ed;
   border: none;
   font-size: 0.42rem;
